# roleplaygent

./: .editorconfig  README.md
roleplaygent-agent/: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
roleplaygent-agent/roleplaygent_agent/: agent.py  api.py  types.py  utils.py
roleplaygent-agent/roleplaygent_agent/agents/: adventure_generator.py  create_game.py  game_master.py  player_creator.py  rules_engine.py  story_manager.py
roleplaygent-agent/roleplaygent_agent/tools/: create_game.py  dice.py  fight.py  game_state.py  player.py
roleplaygent-ui/: fly.toml  next.config.ts  package-lock.json  package.json
roleplaygent-ui/src/: config.ts
roleplaygent-ui/src/app/: globals.css  layout.tsx  page.tsx
roleplaygent-ui/src/app/adventure/[id]/: page.tsx  types.ts
roleplaygent-ui/src/app/adventure/[id]/components/: ChatInterface.tsx  GameState.tsx  Header.tsx
roleplaygent-ui/src/app/adventure/create/: page.tsx
roleplaygent-ui/src/app/api/adventure/chat/: route.ts
roleplaygent-ui/src/app/api/games/: route.ts
roleplaygent-ui/src/app/api/games/[id]/: route.ts
roleplaygent-ui/src/app/dashboard/: page.tsx
roleplaygent-ui/src/hooks/: useConfig.ts
